# talk-oneone

./: .gitignore  CMakeLists.txt  Main.qml  README.md  application.cpp  application.h  audiomgr.cpp  audiomgr.h  configmgr.cpp  configmgr.h  dbmanager.cpp  dbmanager.h  docker-compose.yml  gateway.cpp  gateway.h  init.sql  logger.cpp  logger.h  main.cpp  ppt.md  res.qrc
Components/: ChatMessageListModel.qml  SideButton.qml
Pages/: ChatPage.qml  SettingPage.qml  StatePage.qml
js/: addListModel.js
